# thimblerigger

./: .gitignore  Cargo.toml  readme.md  to debug
src/: board.rs  lib.rs  main.rs  solver.rs  sort.rs  table.rs  timing.txt
