[package]
name = "thimblerigger"
version = "1.31.0"
authors = ["James Mayclin <29185101+jmayclin@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[solver]
crate-type = ["cdylib", "rlib"]

[table]
crate-type = ["cdylib", "rlib"]

[sort]
crate-type = ["cdylib", "rlib"]

[board]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.67"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]